refactor chat filter logic to separate method