@@ -14,7 +14,7 @@ public enum ConnectionType {
   ;
 
   public static ConnectionType fromString(String name) {
-    if (name == null || name.trim().isEmpty()) {
+    if (name == null || name.isBlank()) {
       return OPENAI_COMPATIBLE;
     }
 
